--- a/package.json
+++ b/package.json
@@ -9,55 +9,61 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.7.5",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@clerk/nextjs": "^6.18.5",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.6",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.11",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "cmdk": "^1.1.1",
     "drizzle-orm": "^0.30.10",
-    "geist": "^1.3.1",
+    "geist": "^1.4.1",
     "lucide-react": "^0.411.0",
-    "next": "^14.2.18",
+    "next": "15.3.1",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^20.17.32",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "drizzle-kit": "^0.21.4",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "^14.2.18",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.1",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.36.1"
   },
-  "packageManager": "pnpm@9.1.4"
+  "packageManager": "pnpm@9.1.4",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.2",
+      "@types/react-dom": "19.1.3"
+    }
+  }
 }
