--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.17.32",
     "@types/react": "19.1.2",
@@ -53,7 +54,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
