--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.17.32",
@@ -55,7 +56,8 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1"
   },
   "ct3aMetadata": {
     "initVersion": "7.36.1"
