--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   app:
     platform: "linux/amd64"
@@ -6,10 +5,16 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_CLIENTVAR: "clientvar"
+        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: "pk_live_Y2xlcmsubGFqdXBvLmRlJA"
     working_dir: /app
-    ports:
-      - "3000:3000"
     image: t3-app
+    networks:
+      - Aliases
     environment:
-      - DATABASE_URL=database_url_goes_here
+      - DATABASE_URL=postgresql://postgres:password@localhost:5432/www
+      - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsubGFqdXBvLmRlJA
+      - CLERK_SECRET_KEY=
+
+networks:
+  Aliases:
+    external: true
