change app name

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,14 +17,14 @@ http {
 
         location = /auth-check {
             internal;
-            proxy_pass http://app:3000/api/clerk-auth-check;
+            proxy_pass http://jupo-web:3000/api/clerk-auth-check;
             proxy_pass_request_body off;
             proxy_set_header Content-Length "";
             proxy_set_header X-Original-URI $request_uri;
         }
 
         location / {
-            proxy_pass http://app:3000/;
+            proxy_pass http://jupo-web:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
