--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
-      - default
+      - app-network
+      - immich-network
       - Aliases
 
 volumes:
