--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,12 +8,19 @@ http {
 
         location /photos/ {
             auth_request /auth-check;
-            auth_request_set $auth_status $upstream_status;
+            error_page 401 = @unauthorized;
+            error_page 403 = @unauthorized;
+            error_page 307 = @unauthorized;  # ⬅ catch unexpected redirect
 
             proxy_pass http://immich-server:2283/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
+
+        location @unauthorized {
+            return 403 "You are not authorized to view this page.";
+        }
+
 
         location = /auth-check {
             internal;
