--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,15 +7,28 @@ http {
         listen 80;
 
         location /photos/ {
-            auth_request /auth-check;
-            error_page 401 = @unauthorized;
-            error_page 403 = @unauthorized;
-            error_page 307 = @unauthorized;  # ⬅ catch unexpected redirect
+        auth_request /auth-check;
+        auth_request_set $auth_status $upstream_status;
 
-            proxy_pass http://immich-server:2283/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+        proxy_pass http://immich-server:2283/;
+
+        # Required to avoid corrupted content issues
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+
+        # Forward necessary headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # These help for large static files (fonts, JS, etc.)
+        proxy_buffers 8 16k;
+        proxy_buffer_size 32k;
+
+        # Optional: avoid gzip corruption
+        gzip off;
+    }
 
         location @unauthorized {
             return 403 "You are not authorized to view this page.";
